# Pick_Place_Gantry-ROS-MoveIt

./: README.md
gantry/: CMakeLists.txt  package.xml
gantry/config/: joint_names_Gantry.yaml
gantry/launch/: display.launch  gazebo.launch
gantry/meshes/: Big_box.dae  Big_box.stl  Cup.STL  Cup.dae  Cup1.dae  X_Motion.STL  X_Motion.dae  Y_Motion.STL  Y_Motion.dae  Z_Motion.STL  Z_Motion.dae  Z_Rot.STL  Z_Rot.dae  base_link.STL  base_link.dae  conveyor_belt.dae  conveyor_belt.stl  conveyor_simple.dae  conveyor_simple.stl  onlyrod.dae
gantry/meshes/blend/: Big_box.blend  Big_box.blend1  Cup.blend  X_Motion.blend  X_Motion.blend1  Y_Motion.blend  Z_Motion.blend
gantry/urdf/: Gantry.csv  Gantry.urdf  Gantry_copy.urdf  conveyor.urdf  conveyor2.urdf  red_cube.urdf
gantry/worlds/: light.world
gantry_moveit_files/: .setup_assistant  CMakeLists.txt  package.xml
gantry_moveit_files/config/: conveyor.srdf  conveyor2.srdf  fake_controllers.yaml  gantry.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
gantry_moveit_files/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gantry_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
gantry_moveit_files/msg/: DimDataArray.msg
gantry_moveit_files/src/: box_dim.py  demo.py  detection.py  move_group_interface_tutorial.cpp
gantry_moveit_files/srv/: GetBoolVal.srv
